--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,26 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    mem_limit: 1g
+
+  elasticsearch:
+    image: elasticsearch:8.6.1
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+      - xpack.security.enabled=false
+#    volumes:
+#      - ./data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    mem_limit: 3g
+
+  kibana:
+    image: kibana:8.6.1
+    container_name: kibana
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    mem_limit: 2g
